objects/CaseExternalSystemMapper__c.object
<CustomObject>
    <description>Case External System Mapper</description>
    <fields>
        <fullName>Assign_To_Team__c</fullName>
        <label>Assign To Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <label>BG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Classification</description>
        <inlineHelpText>Classification</inlineHelpText>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Sub-Case Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Type - Subcase Type mapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program_Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA / Case Weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Reason - Scenario Mapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAE_Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO EmailToCase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement_Id__c</fullName>
        <description>This field will be used for Admin and Account Request Record Type.</description>
        <label>Entitlement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalValue__c</fullName>
        <description>ExternalValue</description>
        <inlineHelpText>ExternalValue</inlineHelpText>
        <label>Source System Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LevelofExpertise__c</fullName>
        <description>Expertise Level</description>
        <inlineHelpText>Expertise Level</inlineHelpText>
        <label>Expertise Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Case Origin</description>
        <inlineHelpText>Case Origin</inlineHelpText>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>CSIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <label>Route to Market</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <description>This field will be used for Admin and Account Request Record Type.</description>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemValue__c</fullName>
        <description>SFDC Value</description>
        <inlineHelpText>SFDC Value</inlineHelpText>
        <label>SFDC Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_zone__c</fullName>
        <label>Time zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT+00:00) British Standard Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Irish Standard Time (Europe/Dublin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Western European Standard Time (Europe/Lisbon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) British Summer Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Amsterdam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Berlin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+11:00) Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <picklist>
            <picklistValues>
                <fullName>GBS - Back Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBS - Nearshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CaseExternalSystemMapper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SystemValue__c</columns>
        <columns>Classification__c</columns>
        <columns>Request_Type__c</columns>
        <columns>LevelofExpertise__c</columns>
        <columns>Origin__c</columns>
        <columns>ExternalValue__c</columns>
        <columns>BG__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Assign_To_Team__c</columns>
        <columns>Queue__c</columns>
        <columns>Route_to_Market__c</columns>
        <columns>Entitlement_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Reason_Scenario_Maps</fullName>
        <columns>NAME</columns>
        <columns>Classification__c</columns>
        <columns>Request_Type__c</columns>
        <columns>SystemValue__c</columns>
        <columns>SLA__c</columns>
        <columns>LevelofExpertise__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
            <value>Case Reason - Scenario Mapper</value>
        </filters>
        <label>Case Reason – Scenario Maps</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ht2</fullName>
        <columns>NAME</columns>
        <columns>Classification__c</columns>
        <columns>Request_Type__c</columns>
        <columns>SystemValue__c</columns>
        <columns>SLA__c</columns>
        <columns>LevelofExpertise__c</columns>
        <columns>Entitlement_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Classification__c</field>
            <operation>equals</operation>
            <value>Case Reason - Scenario Mapper</value>
        </filters>
        <label>ht2</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RecordID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseExternalSystemMappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>